[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Others/MolduraInventaryTheme.tres" type="Theme" id=2]
[ext_resource path="res://Others/AllTheme.tres" type="Theme" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.16638
margin_top = 1.16635
margin_right = -1.16638
margin_bottom = 1.16638
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -274.5
margin_top = -141.0
margin_right = 274.5
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.5
margin_top = 4.0
margin_right = 78.5
margin_bottom = 41.0
text = "INVENT√ÅRIO"
valign = 1

[node name="Items" type="Control" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.5
margin_top = -113.0
margin_right = 225.5

[node name="Item1" type="Panel" parent="Panel/Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -50.0
margin_right = -117.0
margin_bottom = 50.0
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Panel/Items/Item1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -37.0
margin_right = 35.5
margin_bottom = 37.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="Panel/Items/Item1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -16.0
margin_right = 47.5
theme = ExtResource( 3 )
text = "Sapo perereca"
valign = 2
clip_text = true

[node name="Button1" type="Button" parent="Panel/Items/Item1"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Item2" type="Panel" parent="Panel/Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -50.0
margin_right = -7.0
margin_bottom = 50.0
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Panel/Items/Item2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -37.0
margin_right = 35.5
margin_bottom = 37.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="Panel/Items/Item2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -16.0
margin_right = 47.5
theme = ExtResource( 3 )
text = "Sapo perereca"
valign = 2
clip_text = true

[node name="Button2" type="Button" parent="Panel/Items/Item2"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Item3" type="Panel" parent="Panel/Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -50.0
margin_right = 103.0
margin_bottom = 50.0
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Panel/Items/Item3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -37.0
margin_right = 35.5
margin_bottom = 37.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="Panel/Items/Item3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -16.0
margin_right = 47.5
theme = ExtResource( 3 )
text = "Sapo perereca"
valign = 2
clip_text = true

[node name="Button3" type="Button" parent="Panel/Items/Item3"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Item4" type="Panel" parent="Panel/Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 113.0
margin_top = -50.0
margin_right = 213.0
margin_bottom = 50.0
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Panel/Items/Item4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -37.0
margin_right = 35.5
margin_bottom = 37.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="Panel/Items/Item4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -16.0
margin_right = 47.5
theme = ExtResource( 3 )
text = "Sapo perereca"
valign = 2
clip_text = true

[node name="Button4" type="Button" parent="Panel/Items/Item4"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
[connection signal="button_down" from="Panel/Items/Item1/Button1" to="." method="_on_Button1_button_down"]
[connection signal="button_down" from="Panel/Items/Item2/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Panel/Items/Item3/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Panel/Items/Item4/Button4" to="." method="_on_Button4_button_down"]
